changed channels and compressor

--- a/wiring-table.html
+++ b/wiring-table.html
@@ -28,19 +28,29 @@
 	        <th>Sensor</th></tr>
 	                  	    <tr><td>0</td><td>Intake containerSwitch</td></tr>
 	            	    <tr><td>1</td><td>Intake toteSwitch</td></tr>
-	            	    <tr><td>2</td><td>DriveSystem port</td></tr>
-	            	    <tr><td>3</td><td>DriveSystem port</td></tr>
-	            	    <tr><td>4</td><td>DriveSystem starboard</td></tr>
-	            	    <tr><td>5</td><td>DriveSystem starboard</td></tr>
-	                                                                                                                                                                                                                                                     	    </table>
+	            	    <tr><td>2</td><td>DriveSystem portRangeFinder</td></tr>
+	            	    <tr><td>3</td><td>DriveSystem portRangeFinder</td></tr>
+	            	    <tr><td>4</td><td>DriveSystem starboardRangeFinder</td></tr>
+	            	    <tr><td>5</td><td>DriveSystem starboardRangeFinder</td></tr>
+	            	    <tr><td>6</td><td>DriveSystem leftFrontEncoder</td></tr>
+	            	    <tr><td>7</td><td>DriveSystem leftFrontEncoder</td></tr>
+	            	    <tr><td>8</td><td>DriveSystem rightFrontEncoder</td></tr>
+	            	    <tr><td>9</td><td>DriveSystem rightFrontEncoder</td></tr>
+	            	    <tr><td>10</td><td>DriveSystem leftRearEncoder</td></tr>
+	            	    <tr><td>11</td><td>DriveSystem leftRearEncoder</td></tr>
+	            	    <tr><td>12</td><td>DriveSystem rightRearEncoder</td></tr>
+	            	    <tr><td>13</td><td>DriveSystem rightRearEncoder</td></tr>
+	            	    <tr><td>14</td><td>DriveSystem forwardRangeFinder</td></tr>
+	            	    <tr><td>15</td><td>DriveSystem forwardRangeFinder</td></tr>
+	                                                                                                                             	    </table>
                         <h2>PWMs</h2>
 	    <table><tr>
 	        <th class="pound">#</th>
 	        <th>Motor</th></tr>
-	                              	    <tr><td>1</td><td>DriveSystem leftRear</td></tr>
-	            	    <tr><td>2</td><td>DriveSystem leftFront</td></tr>
-	            	    <tr><td>3</td><td>DriveSystem rightFront</td></tr>
-	            	    <tr><td>4</td><td>DriveSystem rightRear</td></tr>
+	                              	    <tr><td>1</td><td>DriveSystem rightFront</td></tr>
+	            	    <tr><td>2</td><td>DriveSystem rightRear</td></tr>
+	            	    <tr><td>3</td><td>DriveSystem leftFront</td></tr>
+	            	    <tr><td>4</td><td>DriveSystem leftRear</td></tr>
 	            	    <tr><td>5</td><td>Intake leftWheel</td></tr>
 	            	    <tr><td>6</td><td>Intake rightWheel</td></tr>
 	                        	    <tr><td>8</td><td>Test test</td></tr>
@@ -53,15 +63,19 @@
 	    <table><tr>
 	        <th class="pound">#</th>
 	        <th>Solenoid</th></tr>
-	                  	    <tr><td>0</td><td>Lift trident Forward </td></tr>
-	            	    <tr><td>1</td><td>Lift trident Reverse </td></tr>
-	            	    <tr><td>2</td><td>Lift lifting1 Forward </td></tr>
-	            	    <tr><td>3</td><td>Lift lifting1 Reverse </td></tr>
-	            	    <tr><td>4</td><td>Intake configActuator Forward </td></tr>
-	            	    <tr><td>5</td><td>Intake configActuator Reverse </td></tr>
-	            	    <tr><td>6</td><td>Lift lifting2 Forward </td></tr>
-	            	    <tr><td>7</td><td>Lift lifting2 Reverse </td></tr>
-	                                                                                                                                                                                                                             	    </table>
+	                  	    <tr><td>0</td><td>Lift lifting Forward </td></tr>
+	            	    <tr><td>1</td><td>Lift lifting Reverse </td></tr>
+	            	    <tr><td>2</td><td>Intake configActuator Forward </td></tr>
+	            	    <tr><td>3</td><td>Intake configActuator Reverse </td></tr>
+	            	    <tr><td>4</td><td>Lift trident Forward </td></tr>
+	            	    <tr><td>5</td><td>Lift trident Reverse </td></tr>
+	                                                                                                                                                                                                                                                     	    </table>
                                                                                                                                                                                                                                                     
-          </body>
+                <h2>Compressor</h2>
+	<table><tr>
+	<th class="pound">PCM</th>
+	<th>Device</th></tr>
+	            	    <tr><td>0</td><td>AirCompressor Compressor</td></tr>
+	                                                                                                                                                                                                                                                                                                                 	</table>
+      </body>
 </html>
