renamed the wait command, may've deleted and added all commands files in the process

--- a/wiring-table.html
+++ b/wiring-table.html
@@ -42,7 +42,11 @@
 	            	    <tr><td>13</td><td>DriveSystem rightRearEncoder</td></tr>
 	            	    <tr><td>14</td><td>DriveSystem forwardRangeFinder</td></tr>
 	            	    <tr><td>15</td><td>DriveSystem forwardRangeFinder</td></tr>
-	                                                                                                                             	    </table>
+	            	    <tr><td>16</td><td>Intake leftIntakeEncoder</td></tr>
+	            	    <tr><td>17</td><td>Intake leftIntakeEncoder</td></tr>
+	            	    <tr><td>18</td><td>Intake rightIntakeEncoder</td></tr>
+	            	    <tr><td>19</td><td>Intake rightIntakeEncoder</td></tr>
+	                                                                             	    </table>
                         <h2>PWMs</h2>
 	    <table><tr>
 	        <th class="pound">#</th>
