--- a/wiring-table.html
+++ b/wiring-table.html
@@ -26,8 +26,8 @@
 	    <table><tr>
 	        <th class="pound">#</th>
 	        <th>Sensor</th></tr>
-	                  	    <tr><td>0</td><td>Intake containerSwitch</td></tr>
-	            	    <tr><td>1</td><td>Intake toteSwitch</td></tr>
+	                  	    <tr><td>0</td><td>Intake subsequentToteSwitch</td></tr>
+	            	    <tr><td>1</td><td>Intake firstToteSwitch</td></tr>
 	            	    <tr><td>2</td><td>DriveSystem portRangeFinder</td></tr>
 	            	    <tr><td>3</td><td>DriveSystem portRangeFinder</td></tr>
 	            	    <tr><td>4</td><td>DriveSystem starboardRangeFinder</td></tr>
